[package]
name = "dependency-tracking"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cargo-all-features = "1.10.0"
cargo-audit = "0.19.0" 
cargo-benchcmp = "0.4.4"
cargo-binstall = "0.23.1"
cargo-expand = "1.0.79" 
cargo-geiger = "0.11.6" 
cargo-license = "0.6.1"
cargo-linked = "0.1.0"
cargo-nextest = "0.9.67"
cargo-outdated = "0.14.0"  
cargo-sort = "1.0.9"
cargo-spellcheck = "0.13.2"
cargo-tarpaulin = "0.27.3"
cargo-tomlfmt = "0.1.3"
cargo-udeps = "0.1.45"
cargo-watch = "8.5.2" 
cargo-whatfeatures = "0.9.9"
diesel_cli = "2.1.1"  
flamegraph = "0.6.4"
