[package]
name = "dependency-tracking"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cargo-all-features = "1.10.0"
cargo-audit = "0.20.0" 
cargo-benchcmp = "0.4.4"
cargo-binstall = "1.6.3"
cargo-expand = "1.0.79" 
cargo-geiger = "0.11.7" 
cargo-license = "0.6.1"
cargo-linked = "0.1.0"
cargo-nextest = "0.9.67"
cargo-outdated = "0.15.0"  
cargo-sort = "1.0.9"
cargo-spellcheck = "0.14.0"
cargo-tarpaulin = "0.31.0"
cargo-tomlfmt = "0.1.3"
cargo-udeps = "0.1.46"
cargo-watch = "8.5.2" 
cargo-whatfeatures = "0.9.9"
diesel_cli = "2.1.1"  
flamegraph = "0.6.5"
